--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neely Board</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -16,6 +16,7 @@
     <main class="main-area">
         <div class="centered">
             <section class="cards">
+                <!-- Existing Cards -->
                 <article class="card" status="important">
                     <a href="#">
                         <div class="pixHolder">
@@ -53,6 +54,105 @@
                             <h3>Math - Algebra</h3>
                             <ul>
                                 <li>equations, variables?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <!-- New Cards -->
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/geography.jpg" alt="geography">
+                        </div>
+                        <div class="card-content">
+                            <h3>Geography</h3>
+                            <ul>
+                                <li>countries, capitals?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/artist.jpg" alt="artist">
+                        </div>
+                        <div class="card-content">
+                            <h3>Artist</h3>
+                            <ul>
+                                <li>paintings, sculptures?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/rugby.jpg" alt="rugby">
+                        </div>
+                        <div class="card-content">
+                            <h3>Rugby</h3>
+                            <ul>
+                                <li>positions, rules?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/president.jpg" alt="president">
+                        </div>
+                        <div class="card-content">
+                            <h3>President</h3>
+                            <ul>
+                                <li>world leaders?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/calcium.jpg" alt="calcium">
+                        </div>
+                        <div class="card-content">
+                            <h3>Calcium</h3>
+                            <ul>
+                                <li>health benefits?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/money.jpg" alt="money">
+                        </div>
+                        <div class="card-content">
+                            <h3>Money</h3>
+                            <ul>
+                                <li>currency, savings?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="card">
+                    <a href="#">
+                        <div class="pixHolder">
+                            <img src="images/weeklyword.jpg" alt="weekly word">
+                        </div>
+                        <div class="card-content">
+                            <h3>Weekly Word</h3>
+                            <ul>
+                                <li>word of the week?</li>
                             </ul>
                         </div>
                     </a>
