--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neely Board</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <main class="main-area">
         <div class="centered">
             <section class="cards">
-                <!-- Existing Cards -->
+                <!-- Math - Fractions Card -->
                 <article class="card" status="important">
                     <a href="#">
                         <div class="pixHolder">
@@ -26,34 +26,6 @@
                             <h3>Math - Fractions</h3>
                             <ul>
                                 <li>half, quarter?</li>
-                            </ul>
-                        </div>
-                    </a>
-                </article>
-
-                <article class="card" status="done">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/geometry.jpg" alt="geometry">
-                        </div>
-                        <div class="card-content">
-                            <h3>Math - Geometry</h3>
-                            <ul>
-                                <li>area, perimeter?</li>
-                            </ul>
-                        </div>
-                    </a>
-                </article>
-
-                <article class="card">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/algebra.jpg" alt="algebra">
-                        </div>
-                        <div class="card-content">
-                            <h3>Math - Algebra</h3>
-                            <ul>
-                                <li>equations, variables?</li>
                             </ul>
                         </div>
                     </a>
@@ -145,24 +117,7 @@
                 </article>
 
                 <article class="card">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/weeklyword.jpg" alt="weekly word">
-                        </div>
-                        <div class="card-content">
-                            <h3>Weekly Word</h3>
-                            <ul>
-                                <li>word of the week?</li>
-                            </ul>
-                        </div>
-                    </a>
-                </article>
-            </section>
-        </div>
-    </main>
-</body>
-
-</html>
+             
 
 
 
