--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
         <div class="centered">
             <section class="cards">
                 <!-- Math - Fractions Card -->
-                <article class="card" status="important">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/fractions.jpg" alt="fractions">
-                        </div>
-                        <div class="card-content">
-                            <h3>Math - Fractions</h3>
-                            <ul>
-                                <li>half, quarter?</li>
-                            </ul>
-                        </div>
-                    </a>
-                </article>
+             <article class="card" status="done">
+    <a href="#">
+        <div class="pixHolder">
+            <img src="images/fractions.jpg" alt="fractions">
+        </div>
+        <div class="card-content">
+            <h3>Math - Fractions</h3>
+            <ul>
+                <li>half, quarter?</li>
+            </ul>
+        </div>
+    </a>
+</article>
+
 
                 <!-- New Cards -->
                 <article class="card">
