--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
                 </article>
 
                 <article class="card">
+
+
+                     <footer class="client-info">
+        <p><strong>Client:</strong> Mrs. Erin Higgins, Mt. Vernon Middle School, Fortville, Indiana</p>
+        <p><small>This project is developed for educational purposes and aims to assist students in learning with an interactive interface.</small></p>
+    </footer>
              
 
 
