--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              <article class="card" status="done">
     <a href="#">
         <div class="pixHolder">
-            <img src="images/fractions.jpg" alt="fractions">
+            <img src="https://static.vecteezy.com/system/resources/previews/013/115/384/non_2x/cartoon-maths-elements-background-education-logo-vector.jpg" alt="fractions">
         </div>
         <div class="card-content">
             <h3>Math - Fractions</h3>
