--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
                 </article>
 
                 <article class="card">
+                </article>
+
+            </section>
+        </div>
+    </main>
+</body>
+</html>
 
 
                      <footer class="client-info">
